# Changelog
All notable changes to this project will be documented in this file.

The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [1.0.0]
- Change to only present param links when a parameter would be required for a command or option

## [0.4.1]
- Fix incorrect -n flag name on nw sample app
- Fix missing hcli_version on HCLI command, option, execution and parameter per HCLI 1.0 spec

## [0.4.0]
- Update README documentation to clarify what HCLI Core does
- Update nw sample app to include network allocation for a specific logical group & network.
- Update nw sample app to include network deallocation for a specific logical group & network
- Update nw sample app to include network group listing
- Update nw sample app to include adding and removing CIDR range in the free pool for a given logical group.
- Fix empty or non-conformant json error on jsonf go default hcli app

## [0.3.0]
- Update to clarify the README.
- Update hub to column separated output.
- Update hub to allow listing all services registered to a namespace.
- New sample application nw for managing network CIDR block allocation (deconflicted)
- Fix execution matching to non-greedy to avoid parameters getting cut out in multi-parameter command lines

## [0.2.1]
- Update documentation to showcase hfm instead of hub.
- Prune chroot out of hfm sample.

## [0.2.0]
- Add xenial python 3.7 support.
- Test using cli auto discovery with the latest version of huckle.
- Add tests for hfm sample.
- Add ls and chroot to hfm sample.

## [0.1.6]
- Add Travis CI test for jsonf default.
- Cleanup supported python version to take into account deprecation (2.7 and 3.4) and travis support.

## [0.1.5]
- Remove jsonf from samples since it's the default.
- Fix hub sample HCLI parameter handling ("'param'" vs '"param"').

## [0.1.4]
- Fix HCLI parameter quotes defect on hfm sample.

## [0.1.3]