@@ -6,6 +6,8 @@ and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.
 
 ## [1.0.0]
 - Change to only present param links when a parameter would be required for a command or option
+- Fix broken deallocate option -n in nw sample app
+- Update multi quote in hfm and nw sample apps HCLI docs
 
 ## [0.4.1]
 - Fix incorrect -n flag name on nw sample app
